--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OnTeach">
         <activity android:name=".StoryActivity1"></activity>
-        <activity android:name=".SelectActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".SelectAC" />
+        <activity android:name=".Start">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
