--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.OnTeach">
-        <activity android:name=".StoryActivity1"></activity>
+        <activity android:name=".StoryAC"></activity>
         <activity android:name=".SelectAC" />
         <activity android:name=".Start">
             <intent-filter>
