--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/icon"
+        android:icon="@drawable/icon_tai"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.OnTeach">
         <activity android:name=".StoryAC"></activity>
