--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.OnTeach">
-        <activity android:name=".StoryAC"></activity>
+        <activity android:name=".SelectActivity_101"></activity>
+        <activity android:name=".StoryActivity_101" />
+        <activity android:name=".StoryAC" />
         <activity android:name=".SelectAC" />
         <activity android:name=".Start">
             <intent-filter>
