--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.OnTeach">
-        <activity android:name=".SelectAN"></activity>
+        <activity android:name=".StoryAE"></activity>
+        <activity android:name=".SelectAE" />
+        <activity android:name=".SelectAN" />
         <activity android:name=".StoryAC" />
-        <activity android:name=".SelectActivity_101"></activity>
+        <activity android:name=".SelectActivity_101" />
         <activity android:name=".StoryActivity_101" />
         <activity android:name=".StoryAC" />
         <activity android:name=".SelectAC" />
